// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupportPage should render empty main support page 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 bg-white border-white rounded-full"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 mt-5"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Help & Support
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Do you need any help? Find it in our archive or write to us
              </div>
            </div>
            <div>
              <button
                class="sc-AxjAm kbZyZT"
                color="primary"
                type="button"
              >
                Contact us
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row -mx-2 divide-x divide-theme-neutral-200"
          />
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row space-x-10"
          >
            <div
              class="w-1/3"
            >
              <h2>
                Most Helpful
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Most Popular
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Newest
              </h2>
              <ul />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with categories 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 bg-white border-white rounded-full"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 mt-5"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Help & Support
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Do you need any help? Find it in our archive or write to us
              </div>
            </div>
            <div>
              <button
                class="sc-AxjAm kbZyZT"
                color="primary"
                type="button"
              >
                Contact us
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row -mx-2 divide-x divide-theme-neutral-200"
          >
            <a
              class="flex flex-1 cursor-pointer"
              title="Profile"
            >
              <div
                class="flex flex-row w-full p-8 mx-2 ml-2 bg-white rounded-md hover:shadow-xl"
              >
                <div
                  class="sc-AxirZ kSlAoL mr-3 border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        profile.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex-auto my-auto"
                >
                  <div
                    class="font-bold text-theme-neutral-800"
                  >
                    Profile
                  </div>
                  <div
                    class="text-sm text-theme-neutral"
                  >
                    38 topics
                  </div>
                </div>
              </div>
            </a>
            <a
              class="flex flex-1 cursor-pointer"
              title="Portfolio"
            >
              <div
                class="flex flex-row w-full p-8 mx-2 ml-2 bg-white rounded-md hover:shadow-xl"
              >
                <div
                  class="sc-AxirZ kSlAoL mr-3 border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        portfolio.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex-auto my-auto"
                >
                  <div
                    class="font-bold text-theme-neutral-800"
                  >
                    Portfolio
                  </div>
                  <div
                    class="text-sm text-theme-neutral"
                  >
                    9 topics
                  </div>
                </div>
              </div>
            </a>
            <a
              class="flex flex-1 cursor-pointer"
              title="Plugins"
            >
              <div
                class="flex flex-row w-full p-8 mx-2 ml-2 bg-white rounded-md hover:shadow-xl"
              >
                <div
                  class="sc-AxirZ kSlAoL mr-3 border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        plugins.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex-auto my-auto"
                >
                  <div
                    class="font-bold text-theme-neutral-800"
                  >
                    Plugins
                  </div>
                  <div
                    class="text-sm text-theme-neutral"
                  >
                    106 topics
                  </div>
                </div>
              </div>
            </a>
            <a
              class="flex flex-1 cursor-pointer"
              title="Exchanges"
            >
              <div
                class="flex flex-row w-full p-8 mx-2 ml-2 bg-white rounded-md hover:shadow-xl"
              >
                <div
                  class="sc-AxirZ kSlAoL mr-3 border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        exchange.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex-auto my-auto"
                >
                  <div
                    class="font-bold text-theme-neutral-800"
                  >
                    Exchanges
                  </div>
                  <div
                    class="text-sm text-theme-neutral"
                  >
                    28 topics
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row space-x-10"
          >
            <div
              class="w-1/3"
            >
              <h2>
                Most Helpful
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Most Popular
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Newest
              </h2>
              <ul />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with helpful articles 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 bg-white border-white rounded-full"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 mt-5"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Help & Support
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Do you need any help? Find it in our archive or write to us
              </div>
            </div>
            <div>
              <button
                class="sc-AxjAm kbZyZT"
                color="primary"
                type="button"
              >
                Contact us
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row -mx-2 divide-x divide-theme-neutral-200"
          />
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row space-x-10"
          >
            <div
              class="w-1/3"
            >
              <h2>
                Most Helpful
              </h2>
              <ul>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to register an account?"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to register an account?
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to enter your account"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to enter your account
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How can I change my personal data if I do not have access to my account (forgot my password) and to my mail?"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How can I change my personal data if I do not have access to my account (forgot my password) and to my mail?
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="If you need to make changes to the data entered during the passage of verification, where to apply, how to issue a request?"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      If you need to make changes to the data entered during the passage of verification, where to apply, how to issue a request?
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="Can I delete my account"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      Can I delete my account
                    </div>
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Most Popular
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Newest
              </h2>
              <ul />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with newest articles 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 bg-white border-white rounded-full"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 mt-5"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Help & Support
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Do you need any help? Find it in our archive or write to us
              </div>
            </div>
            <div>
              <button
                class="sc-AxjAm kbZyZT"
                color="primary"
                type="button"
              >
                Contact us
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row -mx-2 divide-x divide-theme-neutral-200"
          />
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row space-x-10"
          >
            <div
              class="w-1/3"
            >
              <h2>
                Most Helpful
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Most Popular
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Newest
              </h2>
              <ul>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to withdraw from wallet"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to withdraw from wallet
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to Make Internal Transfer within wallet"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to Make Internal Transfer within wallet
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="Missing Withdrawals"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      Missing Withdrawals
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="Withdrawal to a Wrong Address"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      Withdrawal to a Wrong Address
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to Resume the Withdrawal Function"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to Resume the Withdrawal Function
                    </div>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with popular articles 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoiQi bBgYbl"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fzqARJ ktgHVM"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="overflow-hidden rounded-lg"
                >
                  <button
                    class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                    color="primary"
                    data-testid="navbar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw fFXzuz p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        notification.svg
                      </svg>
                    </div>
                    <div
                      class="absolute right-0 flex items-center justify-center w-3 h-3 mr-3 -mt-3 bg-white border-white rounded-full"
                    >
                      <div
                        class="w-2 h-2 rounded-full bg-theme-danger-500"
                      />
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxirZ fFfSST -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 mt-5"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                Help & Support
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Do you need any help? Find it in our archive or write to us
              </div>
            </div>
            <div>
              <button
                class="sc-AxjAm kbZyZT"
                color="primary"
                type="button"
              >
                Contact us
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row -mx-2 divide-x divide-theme-neutral-200"
          />
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex flex-row space-x-10"
          >
            <div
              class="w-1/3"
            >
              <h2>
                Most Helpful
              </h2>
              <ul />
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Most Popular
              </h2>
              <ul>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to delete YubiKey for Two-factor Authentication (2FA)"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to delete YubiKey for Two-factor Authentication (2FA)
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="Using a YubiKey for Two-Factor Authentication (2FA)"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      Using a YubiKey for Two-Factor Authentication (2FA)
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="2FA Code Error"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      2FA Code Error
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="How to Reset SMS Authentication"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      How to Reset SMS Authentication
                    </div>
                  </a>
                </li>
                <li
                  class="border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
                >
                  <a
                    class="flex px-2 py-4 -mx-3 rounded-md border-3 border-theme-background hover:bg-theme-neutral-contrast text-theme-neutral-800 hover:text-theme-primary"
                    href="/"
                    title="Supported SMS countries Not Receiving SMS Auth Codes"
                  >
                    <div>
                      <div
                        class="pt-1 text-theme-neutral-800"
                      >
                        <div
                          class="sc-AxiKw bctdez"
                          height="16"
                          width="16"
                        >
                          <svg>
                            article.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ml-3"
                    >
                      Supported SMS countries Not Receiving SMS Auth Codes
                    </div>
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="w-1/3"
            >
              <h2>
                Newest
              </h2>
              <ul />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
